--- a/composer.json
+++ b/composer.json
@@ -35,6 +35,7 @@
         "phpunit/phpunit": "^9.5"
     },
     "require-dev": {
+        "psalm/plugin-phpunit": "^0.16",
         "slevomat/coding-standard": "^7.2",
         "squizlabs/php_codesniffer": "^3.6",
         "vimeo/psalm": "^4.23"
