--- a/composer.json
+++ b/composer.json
@@ -37,12 +37,17 @@
     "require-dev": {
         "psalm/plugin-phpunit": "^0.16",
         "slevomat/coding-standard": "^7.2",
-        "squizlabs/php_codesniffer": "^3.6",
-        "vimeo/psalm": "^4.23"
+        "squizlabs/php_codesniffer": "^3.7",
+        "vimeo/psalm": "^4.26"
     },
     "autoload": {
         "psr-4": {
             "Mobicms\\Testutils\\": "src/"
+        }
+    },
+    "autoload-dev": {
+        "psr-4": {
+            "MobicmsTest\\": "tests/unit/"
         }
     },
     "scripts": {
