--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
             "email": "oleg@mobicms.org"
         },
         {
-            "name": "mobiCMS Contributors",
+            "name": "Our Contributors",
             "homepage": "https://github.com/mobicms/testutils/graphs/contributors"
         }
     ],
@@ -30,7 +30,7 @@
         }
     },
     "require": {
-        "php": "~8.0.0 || ~8.1.0",
+        "php": "~8.0 || ~8.1 || ~8.2",
         "ext-pdo": "*",
         "phpunit/phpunit": "^9.5"
     },
