--- a/phpcs.xml.dist
+++ b/phpcs.xml.dist
@@ -13,6 +13,7 @@
 
     <!-- Paths to check -->
     <file>src</file>
+    <file>tests</file>
 
     <!-- Generic rules -->
     <rule ref="PSR12"/>
@@ -26,8 +27,8 @@
     <!-- Functional rules -->
     <rule ref="SlevomatCodingStandard.TypeHints.DeclareStrictTypes">
         <properties>
-            <property name="newlinesCountBetweenOpenTagAndDeclare" value="2"/>
-            <property name="newlinesCountAfterDeclare" value="2"/>
+            <property name="linesCountBeforeDeclare" value="1"/>
+            <property name="linesCountAfterDeclare" value="1"/>
             <property name="spacesCountAroundEqualsSign" value="0"/>
         </properties>
     </rule>
