--- a/composer.json
+++ b/composer.json
@@ -27,6 +27,9 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.0"
         }
     },
     "require": {
