--- a/.github/workflows/tests.yml
+++ b/.github/workflows/tests.yml
@@ -13,7 +13,7 @@ jobs:
 
     steps:
       - name: Checkout
-        uses: actions/checkout@v2
+        uses: actions/checkout@v3
         with:
           fetch-depth: 0
 
@@ -26,27 +26,27 @@ jobs:
 
       - name: Get composer cache directory
         id: composer-cache
-        run: echo "::set-output name=dir::$(composer config cache-files-dir)"
+        run: echo "dir=$(composer config cache-files-dir)" >> $GITHUB_OUTPUT
 
-      - name: Cache composer dependencies
-        uses: actions/cache@v2
+      - name: Cache dependencies
+        uses: actions/cache@v3
         with:
           path: ${{ steps.composer-cache.outputs.dir }}
-          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.json') }}
+          key: ${{ runner.os }}-composer-${{ hashFiles('**/composer.lock') }}
           restore-keys: ${{ runner.os }}-composer-
 
       - name: Install dependencies
-        run: composer install --no-progress --no-interaction
+        run: composer install --no-progress --no-interaction --ignore-platform-req=php
 
       - name: Start MySQL
         run: sudo /etc/init.d/mysql start
 
-      - name: PhpUnit test
+      - name: Test
         if: matrix.php-versions != '8.2'
         run: composer test
         continue-on-error: true
 
-      - name: PhpUnit test-coverage
+      - name: Test with Coverage
         if: matrix.php-versions == '8.2'
         working-directory: ./
         run: |
@@ -54,7 +54,7 @@ jobs:
           sed -i 's/\/home\/runner\/work\/testutils\/testutils\//\/github\/workspace\//g' report.xml
           sed -i 's/\/home\/runner\/work\/testutils\/testutils\//\/github\/workspace\//g' clover.xml
 
-      - name: Upload coverage report
+      - name: Scan code with SonarCloud
         if: matrix.php-versions == '8.2'
         uses: SonarSource/sonarcloud-github-action@master
         env:
