--- a/psalm.xml.dist
+++ b/psalm.xml.dist
@@ -3,7 +3,9 @@
         xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xmlns="https://getpsalm.org/schema/config"
         xsi:schemaLocation="https://getpsalm.org/schema/config vendor/vimeo/psalm/config.xsd"
+        findUnusedBaselineEntry="true"
         findUnusedPsalmSuppress="true"
+        findUnusedVariablesAndParams="true"
         findUnusedCode="true"
 >
     <projectFiles>
