--- a/composer.json
+++ b/composer.json
@@ -30,12 +30,12 @@
         }
     },
     "require": {
-        "php": "~8.0 || ~8.1 || ~8.2",
+        "php": "~8.1 || ~8.2",
         "ext-pdo": "*",
-        "phpunit/phpunit": "^10.0.19"
+        "phpunit/phpunit": "^10.1"
     },
     "require-dev": {
-        "slevomat/coding-standard": "^8.9",
+        "slevomat/coding-standard": "^8.10",
         "squizlabs/php_codesniffer": "^3.7",
         "vimeo/psalm": "^5.9"
     },
