--- a/phpunit.xml.dist
+++ b/phpunit.xml.dist
@@ -15,11 +15,11 @@
         </testsuite>
     </testsuites>
 
-    <coverage>
+    <source>
         <include>
-            <directory suffix=".php">src</directory>
+            <directory>src</directory>
         </include>
-    </coverage>
+    </source>
 
     <php>
         <var name="test_db_host" value="127.0.0.1"/>
