--- a/composer.json
+++ b/composer.json
@@ -27,17 +27,20 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
+        },
+        "platform": {
+            "php": "8.1"
         }
     },
     "require": {
         "php": "~8.1 || ~8.2",
         "ext-pdo": "*",
-        "phpunit/phpunit": "^10.1"
+        "phpunit/phpunit": "^10.4"
     },
     "require-dev": {
-        "slevomat/coding-standard": "^8.12",
+        "slevomat/coding-standard": "^8.14",
         "squizlabs/php_codesniffer": "^3.7",
-        "vimeo/psalm": "^5.11"
+        "vimeo/psalm": "^5.15"
     },
     "autoload": {
         "psr-4": {
