--- a/composer.json
+++ b/composer.json
@@ -29,18 +29,18 @@
             "dealerdirect/phpcodesniffer-composer-installer": true
         },
         "platform": {
-            "php": "8.1"
+            "php": "8.2"
         }
     },
     "require": {
-        "php": "~8.1 || ~8.2 || ~8.3",
+        "php": "~8.2 || ~8.3",
         "ext-pdo": "*",
         "phpunit/phpunit": "^10.5"
     },
     "require-dev": {
         "slevomat/coding-standard": "^8.14",
         "squizlabs/php_codesniffer": "^3.8",
-        "vimeo/psalm": "^5.18"
+        "vimeo/psalm": "^5.21"
     },
     "autoload": {
         "psr-4": {
