--- a/composer.json
+++ b/composer.json
@@ -40,7 +40,10 @@
     "require-dev": {
         "slevomat/coding-standard": "^8.15",
         "squizlabs/php_codesniffer": "^3.11",
-        "vimeo/psalm": "^5.26"
+        "phpstan/phpstan": "^2.0",
+        "phpstan/phpstan-deprecation-rules": "^2.0",
+        "phpstan/phpstan-phpunit": "^2.0",
+        "phpstan/phpstan-strict-rules": "^2.0"
     },
     "autoload": {
         "psr-4": {
@@ -60,7 +63,7 @@
         ],
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
-        "static-analysis": "psalm --show-info=true",
+        "static-analysis": "phpstan analyse",
         "test": "phpunit --colors=always",
         "test-coverage": [
             "@putenv XDEBUG_MODE=coverage",
