--- a/composer.json
+++ b/composer.json
@@ -33,7 +33,7 @@
         }
     },
     "require": {
-        "php": "~8.2 || ~8.3",
+        "php": "~8.2 || ~8.3 || ~8.4",
         "ext-pdo": "*",
         "phpunit/phpunit": "^11.4"
     },
