--- a/composer.json
+++ b/composer.json
@@ -27,9 +27,6 @@
     "config": {
         "allow-plugins": {
             "dealerdirect/phpcodesniffer-composer-installer": true
-        },
-        "platform": {
-            "php": "8.2"
         }
     },
     "require": {
@@ -40,10 +37,7 @@
     "require-dev": {
         "slevomat/coding-standard": "^8.17",
         "squizlabs/php_codesniffer": "^3.12",
-        "phpstan/phpstan": "^2.1",
-        "phpstan/phpstan-deprecation-rules": "^2.0",
-        "phpstan/phpstan-phpunit": "^2.0",
-        "phpstan/phpstan-strict-rules": "^2.0"
+        "vimeo/psalm": "^6.10"
     },
     "autoload": {
         "psr-4": {
@@ -63,7 +57,7 @@
         ],
         "cs-check": "phpcs",
         "cs-fix": "phpcbf",
-        "static-analysis": "phpstan analyse",
+        "static-analysis": "psalm --no-diff --show-info=true",
         "test": "phpunit --colors=always",
         "test-coverage": [
             "@putenv XDEBUG_MODE=coverage",
