--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,5 +6,10 @@ services:
     restart: unless-stopped
     ports:
       - 3306:3306
+    volumes:
+      - db:/var/lib/mysql
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
+
+volumes:
+  db:
